# mipt-cpp-alxgunin

./: README.md
.github/workflows/: CI.yml
tasks/: CMakeLists.txt
tasks/deque/: deque.h
tasks/list/: stackallocator.h  stackallocator_test.cpp
tasks/shared_ptr/: smart_pointers.h
